Fixed scrollbar problem

--- a/css/HotScape.css
+++ b/css/HotScape.css
@@ -1,3 +1,4 @@
 body {
 	margin: 0;
+	overflow: hidden; // for that 1 pixel that will trigger the scrollbars
 }
